# computational-finance

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/engine_tests/: CMakeLists.txt  basic_check.cpp
python/: Dupire_code_update.py  Exotic Options in Python - Examples.ipynb  Fourier_Methods_for_Option_Pricing.ipynb  Lect4_code.ipynb  M3_part1_code.py  M4_FFT_updated_code.py  Monte_Carlo_for_Risk_Management.ipynb  Pricing Interest Rate Options.ipynb  Simulation_and_Monte_Carlo_examples.ipynb  Volatility_and_Heston_model.ipynb  WQU_CF_Assignment_Notebook.ipynb  WQU_CF_CRT2.ipynb  WQU_CF_CRT4.ipynb  requirements.txt
python/Module5_code/: M5S3Script1.py
python/Module6_code/: M6S3P1.py  M6S3P2.py  M6S3P3.py  M6S3P4.py  M6S3P5.py  M6S3P6.py  mcq_code_0.py  mod6sec3scr0.py  mod6sec3scr1.py  mod6sec3scr2.py  mod6sec3scr3.py  mod6sec3scr4.py  module_6_sec_1_0.py  module_6_sec_1_1.py  module_6_sec_1_2.py  module_6_sec_1_3.py  module_6_sec_2_0.py  module_6_sec_2_1.py  module_6_sec_2_2.py  module_6_sec_2_3.py  module_6_sec_2_4.py  module_6_sec_2_5.py  module_6_sec_2_6.py  module_6_sec_2_7.py  module_6_sec_2_8.py
python/Module7_code/: M7S2Script1.txt  M7S2Script2.txt  M7S2Script3.txt  M7S2Script4.txt  M7S2Script5.txt  MCQ4.txt  Mod7S31.txt  Mod7S32.txt  Mod7S33.txt  Mod7S34.txt  Mod7S35.txt  Mod7S36.txt  mcq7sec1.22.txt  mcq_7_sec_1_2.txt  mcq_7_sec_1_3.txt  mcq_7_sec_2_2.txt  mod7sec1.20.txt  mod7sec1.21.txt  mod7sec1.22.txt  module_7_sec_1_0.txt  module_7_sec_1_1.txt  module_7_sec_1_2.txt  module_7_sec_1_3.txt  module_7_sec_1_4.txt  module_7_sec_2_0.txt  module_7_sec_2_1.txt  module_7_sec_2_2.txt  module_7_sec_2_3.txt  (+1 more)
